# simulation_spatstat

./: .gitignore  README.md  run-sim.sh  spatstat.def
data/: analysis_dt.csv  p_vals_independence.rds  test_stat
data/raw/: aux1.tif  aux2.tif
lavancier/: readme.txt
lavancier/cmake/CMakeModules/: ._FindArgtable.cmake  ._FindOpenCV.cmake  FindCIMG.cmake  FindFftw3ForCImgOnMac.cmake
lavancier/programs/: CMakeLists.txt  CMakeLists.txt~  colocalizationTest copie.cpp  colocalizationTest.cpp  colocalizationTest.cpp~  vesicleDisplaying2D.cpp  vesicleDisplaying2D.h  vesicleDisplaying3D.cpp  vesicleDisplaying3D.h
scripts/: 00-setup.R  01-indep-lavan.R  01-indep-lavan.R~  01-indep_sequential.R  01-sim-data_parallel.R  02-ht.R  02-indep-tpsa.R  02-indep-tpsa.R~  02-rep.R  03-analysis.R  03-att_sequential.R  03-process.R  03-rep-lavan.R  03-rep-lavan.R~  04-rep-tpsa.R  04-rep-tpsa.R~  05-att-lavan.R  05-att-lavan.R~  06-att-tpsa.R  06-att-tpsa.R~  utils_parallel.R  utils_sequential.R
scripts/old/: 01-sim-data.R  02-ht.R
